Update referencing of css in Makefile

--- a/public/view/Makefile
+++ b/public/view/Makefile
@@ -1,7 +1,7 @@
 all: history.html
 
 history.html: history.markdown ../index.css
-	pandoc -s -t html5 -c ../index.css history.markdown -o history.html
+	pandoc -s -t html5 -c /index.css history.markdown -o history.html
 
 clean:
 	rm history.html
