--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,6 @@
 {
   "tasks": {
-    "build": "deno run --allow-read --allow-write build.ts"
+    "build": "deno run --allow-read --allow-write build.ts",
+    "test": "deno test --allow-read --allow-write --allow-net"
   }
 }
